--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
-    "twilio": "^4.11.2"
+    "twilio": "^4.11.2",
+    "ws": "^8.13.0"
   }
 }
